css/style.css
body {
  margin: 0;
  padding: 0;
  background-image: url(../images/WoodTable.png);
  background-size: 100%
}
.board {
  padding-bottom:81px;
  width: 1023px;
  height: 665px;
  margin: -333px 0 0 -511px;
  top: 50%;
  left: 50%;
  background: url(../images/board.png) no-repeat;
  position: relative;
}

.bottom-panel {
  position: fixed;
  bottom: 0px;
  height: 81px;
  width: 100%;
  background-image: url(../images/bottompanel.png);
  background-size: 100%;
  z-index: 1000;
  float: left;
}

/* Workspaces */
.workspace {
  position: absolute;
  cursor: pointer;
}
.workspace.forest {
  left: 323px;
  top: 108px;
  width: 90px;
  height: 110px;
}
.workspace.claypit {
  left: 488px;
  top: 106px;
  width: 160px;
  height: 70px;
}
.workspace.quary {
  left: 890px;
  top: 92px;
  width: 110px;
  height: 130px;
}
.workspace.river {
  left: 760px;
  top: 261px;
  width: 120px;
  height: 80px;
}
.workspace.hunt {
  left: 119px;
  top: 263px;
  width: 120px;
  height: 90px;
}
.workspace.field {
  left: 293px;
  top: 373px;
  width: 60px;
  height: 50px;
}
.workspace.toolhut {
  left: 546px;
  top: 343px;
  width: 40px;
  height: 40px;
}
.workspace.specialhut {
  left: 378px;
  top: 476px;
  width: 80px;
  height: 40px;
}

/* Meeple */
.meeple {
  width: 24px;
  height: 35px;
}
.meeple.ghost { opacity: 0.3; }
.meeple.player1 { background: url(../images/red_meeple.png); }
.meeple.player2 { background: url(../images/green_meeple.png); }
.meeple.player3 { background: url(../images/yellow_meeple.png); }
.meeple.player4 { background: url(../images/blue_meeple.png); }
.workspace .meeple { position: absolute; }
.toolhut .position1 { left: 10px; top: -10px; }
.field .position1 { left: 15px; top: -7px; }
.specialhut .position1 { left: 10px; top: -5px; }
.specialhut .position2 { left: 45px; top: -12px; }
.building .position1 { left: 32px; top: 25px; }
.forest .position1 { left: 8px; top: -11px; }
.forest .position2 { left: 43px; top: 0px; }
.forest .position3 { left: 15px; top: 17px; }
.forest .position4 { left: 54px; top: 23px; }
.forest .position5 { left: 7px; top: 41px; }
.forest .position6 { left: 42px; top: 45px; }
.forest .position7 { left: 56px; top: 65px; }
.claypit .position1 { left: 9px; top: 1px; }
.claypit .position2 { left: 53px; top: -5px; }
.claypit .position3 { left: 88px; top: -9px; }
.claypit .position4 { left: 125px; top: -2px; }
.claypit .position5 { left: 45px; top: 20px; }
.claypit .position6 { left: 87px; top: 17px; }
.claypit .position7 { left: 131px; top: 21px; }
.quary .position1 { left: 5px; top: 1px; }
.quary .position2 { left: 44px; top: 1px; }
.quary .position3 { left: 33px; top: 21px; }
.quary .position4 { left: 70px; top: 23px; }
.quary .position5 { left: 40px; top: 43px; }
.quary .position6 { left: 74px; top: 50px; }
.quary .position7 { left: 61px; top: 77px; }
.river .position1 { left: 16px; top: -10px; }
.river .position2 { left: 54px; top: -12px; }
.river .position3 { left: 90px; top: -6px; }
.river .position4 { left: 8px; top: 12px; }
.river .position5 { left: 46px; top: 9px; }
.river .position6 { left: 80px; top: 17px; }
.river .position7 { left: 51px; top: 35px; }
.hunt .meeple {
  position: static;
  display: inline-block;
  margin-left: -8px;
  margin-top: -8px;
}

.player1 { color: red; }
.player2 { color: green; }
.player3 { color: #EAC117; }
.player4 { color: blue; }

/* Player Boards */
.player-board {
  width: 150px;
  padding-top: 20px;
  margin-left: 20px;
  float: left;
}

.counter {
  float: left;
  width: 35px;
  height: 29px;
  margin 5px;
  background-repeat: no-repeat;
}

.counter.worker-pile { background-size: 50%;}
.player1 .counter.worker-pile { background-image: url(../images/red_meeple.png); }
.player2 .counter.worker-pile { background-image: url(../images/green_meeple.png); }
.counter.wood { background-image: url(../images/wood.png); }
.counter.brick { background-image: url(../images/clay.png); }
.counter.stone { background-image: url(../images/stone.png); }
.counter.gold { background-image: url(../images/gold.png); }

/* Dialogs */
.gameover,
.resolution-dialog,
.purchase-dialog,
.placement-dialog,
.feeding-dialog {
  position: absolute;
  top: 10px;
  left: 10px;
  background: white;
  border: 2px solid gray;
  z-index: 100;
}
.placement-dialog .meeple { display: inline-block; }

/* Buildings */
.building {
  box-shadow: 0px 1px 0px #333;
  top: 548px;
  width: 91px;
  height: 112px;
}
.building-pile1 { left: 72px; }
.building-pile2 { left: 178px; }
.building-pile3 { left: 287px; }
.building-pile4 { left: 395px; }
.building-back { background: url(../images/hut_back.png); }
.building1 { background: url(../images/hut_01.png); }
.building4 { background: url(../images/hut_04.png); }
.building6 { background: url(../images/hut_06.png); }
.building8 { background: url(../images/hut_08.png); }
.building12 { background: url(../images/hut_12.png); }
.building13 { background: url(../images/hut_13.png); }
.building14 { background: url(../images/hut_14.png); }
.building15 { background: url(../images/hut_15.png); }
.building16 { background: url(../images/hut_16.png); }
.building18 { background: url(../images/hut_18.png); }
.building20 { background: url(../images/hut_20.png); }
.building21 { background: url(../images/hut_21.png); }
.building23 { background: url(../images/hut_23.png); }
.building24 { background: url(../images/hut_24.png); }
.building26 { background: url(../images/hut_26.png); }
.building27 { background: url(../images/hut_27.png); }
.building28 { background: url(../images/hut_28.png); }
.stack1 { z-index: 7; }
.stack2 { z-index: 6; }
.stack3 { z-index: 5; }
.stack4 { z-index: 4; }
.stack5 { z-index: 3; }
.stack6 { z-index: 2; }
.stack7 { z-index: 1; }
.building-pile1.stack6,
.building-pile2.stack6,
.building-pile3.stack6,
.building-pile4.stack6 { top: 546px; }
.building-pile1.stack5,
.building-pile2.stack5,
.building-pile3.stack5,
.building-pile4.stack5 { top: 544px; }
.building-pile1.stack4,
.building-pile2.stack4,
.building-pile3.stack4,
.building-pile4.stack4 { top: 542px; }
.building-pile1.stack3,
.building-pile2.stack3,
.building-pile3.stack3,
.building-pile4.stack3 { top: 540px; }
.building-pile1.stack2,
.building-pile2.stack2,
.building-pile3.stack2,
.building-pile4.stack2 { top: 538px; }
.building-pile1.stack1,
.building-pile2.stack1,
.building-pile3.stack1,
.building-pile4.stack1 { top: 536px; }

/* Production Track */
.production-track {
  position: absolute;
  top: 250px;
}

.production-track div {
  height: 32px;
  width: 45px;
  margin: 5px;
}

div.production-marker {
  float: left;
  margin: 1px;
  width: 10px;
  height: 10px;
}

.production-marker.player1 { background-color: red; }
.production-marker.player2 { background-color: green; }
.production-marker.player3 { background-color: #EAC117; }
.production-marker.player4 { background-color: blue; }

/* Dice */
.die {
  background: url(../images/dice.png) no-repeat;
  width: 113px;
  height: 113px;
  display: inline-block;
}
.die.face1 { background-position: 0px 0px; }
.die.face2 { background-position: -113px 0px; }
.die.face3 { background-position: -226px 0px; }
.die.face4 { background-position: -339px 0px; }
.die.face5 { background-position: -452px 0px; }
.die.face6 { background-position: -565px 0px; }

